Fix header misalignment in home page

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -21,6 +21,7 @@ body {
 
 #page-content {
   min-height: calc(100vh - (var(--header-offset) + var(--footer-offset)));
+  margin-top: -1px;
 }
 
 header, 
